--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,12 @@ project(UNP C)
 set(CMAKE_C_STANDARD 99)
 
 add_executable(UNP01 main.c )
-add_executable(UNP02 TIME/001client.c)
-add_executable(UNP03 TIME/001server.c)
-add_executable(UNP04 ECHO/Echoclient.c)
+add_executable(UNP02 TIME/client.c)
+add_executable(UNP03 TIME/server.c)
+add_executable(UNP04 ECHO/EchoClient.c)
 add_executable(UNP05 ECHO/EchoServer.c)
 add_executable(UNP06 CHAT/chat-init-client.c)
 add_executable(UNP07 CHAT/chat-client.c)
+add_executable(UNP08 CONCURRENT\ ECHO/EchoClient01.c)
+add_executable(UNP09 CONCURRENT\ ECHO/EchoClient02.c)
+add_executable(UNP10 CONCURRENT\ ECHO/EchoServer.c)
