--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,11 @@ add_executable(UNP02 TIME/client.c)
 add_executable(UNP03 TIME/server.c)
 add_executable(UNP04 ECHO/EchoClient.c)
 add_executable(UNP05 ECHO/EchoServer.c)
-add_executable(UNP06 CHAT/chat-init-client.c)
-add_executable(UNP07 CHAT/chat-client.c)
+add_executable(UNP06 CHAT/chat-client.c)
+add_executable(UNP07 CHAT/chat-server.c)
 add_executable(UNP08 CONCURRENT\ ECHO/EchoClient01.c)
 add_executable(UNP09 CONCURRENT\ ECHO/EchoClient02.c)
 add_executable(UNP10 CONCURRENT\ ECHO/EchoServer.c)
+add_executable(UNP11 CONCURRENT\ CHAT/chat-client-01.c)
+add_executable(UNP12 CONCURRENT\ CHAT/chat-client-02.c)
+add_executable(UNP13 CONCURRENT\ CHAT/chat-server.c)
