--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,3 +16,5 @@ add_executable(UNP10 CONCURRENT\ ECHO/EchoServer.c)
 add_executable(UNP11 CONCURRENT\ CHAT/chat-client-01.c)
 add_executable(UNP12 CONCURRENT\ CHAT/chat-client-02.c)
 add_executable(UNP13 CONCURRENT\ CHAT/chat-server.c)
+add_executable(UNP14 EXAMPLE/bzero_str.c)
+add_executable(UNP15 EXAMPLE/bzero_int.c)
