--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,5 @@ add_executable(UNP12 CONCURRENT\ CHAT/chat-client-02.c)
 add_executable(UNP13 CONCURRENT\ CHAT/chat-server.c)
 add_executable(UNP14 EXAMPLE/bzero_str.c)
 add_executable(UNP15 EXAMPLE/bzero_int.c)
+add_executable(UNP16 EXAMPLE/bcmp.c)
+add_executable(UNP17 EXAMPLE/bcopy.c)
