--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,8 @@ add_executable(UNP14 EXAMPLE/bzero_str.c)
 add_executable(UNP15 EXAMPLE/bzero_int.c)
 add_executable(UNP16 EXAMPLE/bcmp.c)
 add_executable(UNP17 EXAMPLE/bcopy.c)
+add_executable(UNP18 EXAMPLE/memset_str.c)
+add_executable(UNP19 EXAMPLE/memset_int.c)
+add_executable(UNP20 EXAMPLE/memcmp.c)
+add_executable(UNP21 EXAMPLE/memcpy.c)
+add_executable(UNP22 EXAMPLE/ip_manu.c)
