--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,3 +25,7 @@ add_executable(UNP19 EXAMPLE/memset_int.c)
 add_executable(UNP20 EXAMPLE/memcmp.c)
 add_executable(UNP21 EXAMPLE/memcpy.c)
 add_executable(UNP22 EXAMPLE/ip_manu.c)
+add_executable(UNP23 EXAMPLE/inet_aton.c)
+add_executable(UNP24 EXAMPLE/ip_validator.c)
+add_executable(UNP25 EXAMPLE/inet_ntoa.c)
+add_executable(UNP26 EXAMPLE/inet_pton.c)
