concurrent chat with safety - no zombie process and other...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,5 @@ add_executable(UNP23 EXAMPLE/inet_aton.c)
 add_executable(UNP24 EXAMPLE/ip_validator.c)
 add_executable(UNP25 EXAMPLE/inet_ntoa.c)
 add_executable(UNP26 EXAMPLE/inet_pton.c)
+add_executable(UNP27 LAB\ TEST\ 1/server.c)
+add_executable(UNP28 LAB\ TEST\ 1/client01.c)
