--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,3 +31,5 @@ add_executable(UNP25 EXAMPLE/inet_ntoa.c)
 add_executable(UNP26 EXAMPLE/inet_pton.c)
 add_executable(UNP27 LAB\ TEST\ 1/server.c)
 add_executable(UNP28 LAB\ TEST\ 1/client.c)
+add_executable(UNP29 IO\ MUX/server.c)
+add_executable(UNP30 IO\ MUX/client.c)
