--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,4 +32,6 @@ add_executable(UNP26 EXAMPLE/inet_pton.c)
 add_executable(UNP27 LAB\ TEST\ 1/server.c)
 add_executable(UNP28 LAB\ TEST\ 1/client.c)
 add_executable(UNP29 IO\ MUX/server.c)
-add_executable(UNP30 IO\ MUX/client.c)
+add_executable(UNP30 IO\ MUX/client.c )
+add_executable(UNP31 IO\ ECHO/client.c )
+add_executable(UNP32 IO\ ECHO/server.c )
