--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,4 +34,8 @@ add_executable(UNP28 LAB\ TEST\ 1/client.c)
 add_executable(UNP29 IO\ MUX/server.c)
 add_executable(UNP30 IO\ MUX/client.c )
 add_executable(UNP31 IO\ ECHO/client.c )
-add_executable(UNP32 IO\ ECHO/server.c )
+add_executable(UNP32 IO\ ECHO/server.c)
+add_executable(UNP33 UDP\ ECHO/server.c)
+add_executable(UNP34 UDP\ ECHO/client.c)
+add_executable(UNP35 UDP\ TIME/server.c)
+add_executable(UNP36 UDP\ TIME/client.c)
